<resources>
    <string name="app_name">Social Network</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Profile</string>
    <string name="subscribe">Подписаться</string>
    <string name="write_message">Написать сообщение</string>
    <string name="user_avatar">Аватар пользователя</string>
    <string name="nickname_example">oguzok</string>
    <string name="posts_count_example">11</string>
    <string name="posts">Публикации</string>
    <string name="followers_count_example">260</string>
    <string name="followers">Подписчики</string>
    <string name="followings_count_example">217</string>
    <string name="followings">Подписки</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="share_profile">Поделиться профилем</string>
    <string name="username">Имя пользователя</string>
    <string name="post_photo">Фото поста</string>
    <string name="like_icon">Иконка лайка</string>
    <string name="comment_icon">Иконка комментария</string>
    <string name="post_description">Описание поста</string>
    <string name="post_time_example">22 ч. назад</string>
    <string name="comments">Комментарии</string>
    <string name="start_discussion">Начните обсуждение...</string>
    <string name="comment">Комментарий</string>
</resources>