<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@color/dark"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/postAvatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/circle_background"
            android:contentDescription="@string/user_avatar"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/postUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="4dp"
        android:background="@color/black"
        android:contentDescription="@string/post_photo"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/likeButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:clickable="true"
            android:contentDescription="@string/like_icon"
            android:focusable="true"
            android:src="@drawable/ic_heart" />

        <TextView
            android:id="@+id/likeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/commentButton"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:clickable="true"
            android:contentDescription="@string/comment_icon"
            android:focusable="true"
            android:paddingTop="1dp"
            android:src="@drawable/ic_comment" />

        <TextView
            android:id="@+id/commentCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="6dp">

        <TextView
            android:id="@+id/postDescriptionUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/postDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/post_description"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/postTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="4dp"
        android:text="@string/post_time_example"
        android:textColor="@color/white"
        android:textSize="12sp" />
</LinearLayout>
